--- a/tasks/install_switches.yml
+++ b/tasks/install_switches.yml
@@ -1,3 +1,12 @@
+- name: Update OPAM cache
+  ansible.builtin.command:
+    cmd: opam update
+  become: true
+  become_user: "{{ (opam_install_location == 'system_wide') | ternary('root', opam_user) }}"
+  register: opam_update_output
+  changed_when: "'no changes from' not in opam_update_output.stdout"
+  failed_when: opam_update_output.rc != 0
+
 - name: Install OPAM switches
   ansible.builtin.include_tasks: install_one_switch.yml
   loop: "{{ opam_switches }}"
